More game logic, fixes, etc
Squashed commit of the following:

commit 94aa3d3b4ad59911a98d3420408d11b57f0343eb
Author: gjeck <gregory.jeckell@gmail.com>
Date:   Mon Sep 11 01:02:41 2017 -0700

    Minify html to sqeeze a few more bytes

commit ec943d03812b36546bf99a4c4024d672c00d99a3
Author: gjeck <gregory.jeckell@gmail.com>
Date:   Mon Sep 11 00:46:23 2017 -0700

    Add retry. Add sound throttling safari fix

commit 4a45a45c29737f169821d89ef021ed11ff06a750
Author: gjeck <gregory.jeckell@gmail.com>
Date:   Sun Sep 10 23:33:14 2017 -0700

    Fix next level. Add jsfxr as dependency

commit a54864bcb915a702e55f6ca480dcd515cf26b59f
Author: gjeck <gregory.jeckell@gmail.com>
Date:   Sun Sep 10 23:16:49 2017 -0700

    Handle hero collision death and sound

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -75,6 +75,11 @@ canvas {
   background-color: rgba(54, 34, 145, 1);
 }
 
+.popup-container {
+  padding: 35px 75px;
+  border-radius: 5px;
+}
+
 .fixed-container {
   position: fixed;
   width: 100%;
@@ -83,6 +88,13 @@ canvas {
 
 .absolute-centered-container {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.fixed-centered-container {
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -119,6 +131,11 @@ canvas {
 
 .fade-in {
   animation: fade-in 0.75s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.fade-out {
+  animation: fade-out 0.75s ease-in-out;
   animation-fill-mode: forwards;
 }
 
@@ -198,5 +215,16 @@ canvas {
   to {
     opacity: 1;
     visibility: visible;
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    visibility: visible;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
   }
 }
